--- a/index.html
+++ b/index.html
@@ -4,148 +4,147 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Card Game</title>
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    
+
+
     <div class="wrapper">
         <ul class="cards">
             <li class="card">
                 <div class="view front-view">
                     <span class="material-icons">question_mark</span>
                 </div>
-                <div class="view front-view">
-                    <img src="images/img-1.png" alt="card-img">
+                <div class="view back-view">
+                    <img src="img/img-1.png" alt="card.img">
                 </div>
-                <li class="card">
-                    <div class="view front-view">
-                        <span class="material-icons">question_mark</span>
-                    </div>
-                    <div class="view front-view">
-                        <img src="images/img-2.png" alt="card-img">
-                    </div>
-                </li>
-                <li class="card">
-                    <div class="view front-view">
-                        <span class="material-icons">question_mark</span>
-                    </div>
-                    <div class="view front-view">
-                        <img src="images/img-3.png" alt="card-img">
-                    </div>
-                </li>
-                <li class="card">
-                    <div class="view front-view">
-                        <span class="material-icons">question_mark</span>
-                    </div>
-                    <div class="view front-view">
-                        <img src="images/img-4.png" alt="card-img">
-                    </div>
-                </li>
-                <li class="card">
-                    <div class="view front-view">
-                        <span class="material-icons">question_mark</span>
-                    </div>
-                    <div class="view front-view">
-                        <img src="images/img-5.png" alt="card-img">
-                    </div>
-                </li>
-                <li class="card">
-                    <div class="view front-view">
-                        <span class="material-icons">question_mark</span>
-                    </div>
-                    <div class="view front-view">
-                        <img src="images/img-6.png" alt="card-img">
-                    </div>
-                </li>
-                <li class="card">
-                    <div class="view front-view">
-                        <span class="material-icons">question_mark</span>
-                    </div>
-                    <div class="view front-view">
-                        <img src="images/img-7.png" alt="card-img">
-                    </div>
-                </li>
-                <li class="card">
-                    <div class="view front-view">
-                        <span class="material-icons">question_mark</span>
-                    </div>
-                    <div class="view front-view">
-                        <img src="images/img-8.png" alt="card-img">
-                    </div>
-                </li>
             </li>
-        </ul>
-        <ul class="cards">
             <li class="card">
                 <div class="view front-view">
                     <span class="material-icons">question_mark</span>
                 </div>
-                <div class="view front-view">
-                    <img src="images/img-1.png" alt="card-img">
+                <div class="view back-view">
+                    <img src="img/img-2.png" alt="card.img">
                 </div>
-                <li class="card">
-                    <div class="view front-view">
-                        <span class="material-icons">question_mark</span>
-                    </div>
-                    <div class="view front-view">
-                        <img src="images/img-2.png" alt="card-img">
-                    </div>
-                </li>
-                <li class="card">
-                    <div class="view front-view">
-                        <span class="material-icons">question_mark</span>
-                    </div>
-                    <div class="view front-view">
-                        <img src="images/img-3.png" alt="card-img">
-                    </div>
-                </li>
-                <li class="card">
-                    <div class="view front-view">
-                        <span class="material-icons">question_mark</span>
-                    </div>
-                    <div class="view front-view">
-                        <img src="images/img-4.png" alt="card-img">
-                    </div>
-                </li>
-                <li class="card">
-                    <div class="view front-view">
-                        <span class="material-icons">question_mark</span>
-                    </div>
-                    <div class="view front-view">
-                        <img src="images/img-5.png" alt="card-img">
-                    </div>
-                </li>
-                <li class="card">
-                    <div class="view front-view">
-                        <span class="material-icons">question_mark</span>
-                    </div>
-                    <div class="view front-view">
-                        <img src="images/img-6.png" alt="card-img">
-                    </div>
-                </li>
-                <li class="card">
-                    <div class="view front-view">
-                        <span class="material-icons">question_mark</span>
-                    </div>
-                    <div class="view front-view">
-                        <img src="images/img-7.png" alt="card-img">
-                    </div>
-                </li>
-                <li class="card">
-                    <div class="view front-view">
-                        <span class="material-icons">question_mark</span>
-                    </div>
-                    <div class="view front-view">
-                        <img src="images/img-8.png" alt="card-img">
-                    </div>
-                </li>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="img/img-3.png" alt="card.img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="img/img-4.png" alt="card.img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="img/img-5.png" alt="card.img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="img/img-6.png" alt="card.img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="img/img-7.png" alt="card.img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="img/img-8.png" alt="card.img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="img/img-1.png" alt="card.img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="img/img-2.png" alt="card.img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="img/img-3.png" alt="card.img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="img/img-4.png" alt="card.img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="img/img-5.png" alt="card.img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="img/img-6.png" alt="card.img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="img/img-7.png" alt="card.img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="img/img-8.png" alt="card.img">
+                </div>
             </li>
         </ul>
     </div>
-<script src="script.js"></script>
-  
+    
+
+    <script src="js/script.js"></script>
 </body>
 </html>
